--- a/static/manifest.json
+++ b/static/manifest.json
@@ -9,15 +9,9 @@
   "orientation": "any",
   "icons": [
     {
-      "src": "/icon-512x512.png",
-      "sizes": "512x512",
+      "src": "/pwa_logo.png",
+      "sizes": "288x288",
       "type": "image/png"
-    },
-    {
-      "src": "/manifest-icon-512.maskable.png",
-      "sizes": "512x512",
-      "type": "image/png",
-      "purpose": "maskable"
     }
   ]
 }
