100% lighthouse score in all categories

--- a/static/manifest.json
+++ b/static/manifest.json
@@ -10,8 +10,14 @@
   "icons": [
     {
       "src": "/pwa_logo.png",
-      "sizes": "288x288",
+      "sizes": "512x512",
       "type": "image/png"
+    },
+    {
+      "src": "/pwa_logo.mask.png",
+      "sizes": "512x512",
+      "type": "image/png",
+      "purpose": "maskable"
     }
   ]
 }
