--- a/static/manifest.json
+++ b/static/manifest.json
@@ -3,7 +3,8 @@
   "short_name": "Mezo",
   "theme_color": "#10b981",
   "background_color": "#1F2937",
-  "display": "fullscreen",
+  "display": "standalone",
+  "appType": "pwa",
   "scope": "/",
   "start_url": "/",
   "orientation": "any",
