--- a/deno.json
+++ b/deno.json
@@ -11,7 +11,8 @@
   "lint": {
     "rules": {
       "exclude": [
-        "no-unused-vars"
+        "no-unused-vars",
+        "no-explicit-any"
       ]
     }
   }
