made second maskable image

--- a/static/manifest.json
+++ b/static/manifest.json
@@ -15,7 +15,13 @@
       "src": "/pwa_logo.png",
       "sizes": "512x512",
       "type": "image/png",
-      "purpose": "any maskable"
+      "purpose": "any"
+    },
+    {
+      "src": "/pwa_logo.mask.png",
+      "sizes": "512x512",
+      "type": "image/png",
+      "purpose": "maskable"
     }
   ]
 }
