--- a/deno.jsonc
+++ b/deno.jsonc
@@ -3,7 +3,7 @@
   "tasks": {
     "start": "deno run -A --unstable --watch=static/,routes/ dev.ts"
   },
-  "importMap": "./import_map.json",
+  "importMap": "./import_map.jsonc",
   "compilerOptions": {
     "jsx": "react-jsx",
     "jsxImportSource": "preact"
