--- a/import_map.jsonc
+++ b/import_map.jsonc
@@ -11,6 +11,6 @@
     "twind/": "https://esm.sh/twind@0.16.19/",
     "$std/": "https://deno.land/std@0.192.0/",
     "zod": "https://deno.land/x/zod@v3.21.4/mod.ts",
-    "react-like-router": "https://deno.land/x/react_like_router@0.2.2/mod.ts"
+    "react-like-router": "../react-like-router/mod.ts"
   }
 }
