--- a/import_map.jsonc
+++ b/import_map.jsonc
@@ -1,7 +1,6 @@
 {
   "imports": {
-    "$fresh/": "https://deno.land/x/fresh@1.2.0/",
-    "$fresh_layout/": "https://deno.land/x/fresh_layout@0.1.0/",
+    "$fresh/": "https://deno.land/x/fresh@1.4.2/",
     "preact": "https://esm.sh/preact@10.15.1",
     "preact/": "https://esm.sh/preact@10.15.1/",
     "preact-render-to-string": "https://esm.sh/*preact-render-to-string@6.1.0",
@@ -10,7 +9,6 @@
     "twind": "https://esm.sh/twind@0.16.19",
     "twind/": "https://esm.sh/twind@0.16.19/",
     "$std/": "https://deno.land/std@0.192.0/",
-    "zod": "https://deno.land/x/zod@v3.21.4/mod.ts",
-    "react-like-router": "https://deno.land/x/react_like_router@0.2.4/mod.ts"
+    "zod": "https://deno.land/x/zod@v3.21.4/mod.ts"
   }
 }
