--- a/static/manifest.json
+++ b/static/manifest.json
@@ -1,6 +1,16 @@
 {
   "$schema": "https://json.schemastore.org/web-manifest",
   "name": "Mezo",
+  "description": "Mezo is a sample PWA",
+  "display_override": [
+    "window-controls-overlay",
+    "standalone",
+    "browser"
+  ],
+  "edge_side_panel": {
+    "preferred_width": 400
+  },
+  "handle_links": "not-preferred",
   "short_name": "Mezo",
   "theme_color": "#1F2937",
   "background_color": "#1F2937",
