--- a/static/manifest.json
+++ b/static/manifest.json
@@ -3,6 +3,9 @@
   "description": "Mezo is a sample PWA",
   "id": "mezo",
   "short_name": "Mezo",
+  "lang": "en",
+  "dir": "auto",
+  "categories": ["entertainment"],
   "theme_color": "#1F2937",
   "background_color": "#1F2937",
   "display": "standalone",
@@ -48,6 +51,47 @@
     {
       "protocol": "web+music",
       "url": "/play?track=%s"
+    }
+  ],
+  "iarc_rating_id": "e58c174a-81d2-5c3c-32cc-34b8de4a52e9",
+  "related_applications": [
+    {
+      "platform": "play",
+      "id": "com.mezo.app"
+    }
+  ],
+  "prefer_related_applications": false,
+  "scope_extensions": [
+    {
+      "type": "web-bundle",
+      "url": "/mezo.webbundle"
+    }
+  ],
+  "share_target": {
+    "action": "/share",
+    "method": "POST",
+    "enctype": "multipart/form-data",
+    "params": {
+      "title": "title",
+      "text": "text",
+      "url": "url",
+      "files": [
+        {
+          "name": "file",
+          "accept": ["image/*"]
+        }
+      ]
+    }
+  },
+  "widgets": [
+    {
+      "name": "Mezo",
+      "url": "/widget",
+      "features": {
+        "resizeable": true,
+        "scrolling": true,
+        "frame": "chrome"
+      }
     }
   ]
 }
