added 'categories' to manifest to satisfy pwa requirements

--- a/static/manifest.json
+++ b/static/manifest.json
@@ -5,7 +5,7 @@
   "short_name": "Mezo",
   "lang": "en",
   "dir": "auto",
-  "categories": [],
+  "categories": ["utilities"],
   "theme_color": "#1F2937",
   "background_color": "#1F2937",
   "display": "standalone",
