--- a/deno.jsonc
+++ b/deno.jsonc
@@ -1,22 +1,45 @@
 {
   "lock": false,
   "tasks": {
-    "start": "deno run -A --unstable --watch=static/,routes/ dev.ts"
+    "start": "deno run -A --unstable --watch=static/,routes/ dev.ts",
+    "build": "deno run -A dev.ts build",
+    "preview": "deno run -A main.ts"
   },
-  "importMap": "./import_map.jsonc",
   "compilerOptions": {
     "jsx": "react-jsx",
     "jsxImportSource": "preact"
+  },
+  "imports": {
+    "$fresh/": "https://deno.land/x/fresh@1.4.3/",
+    "preact": "https://esm.sh/preact@10.15.1",
+    "preact/": "https://esm.sh/preact@10.15.1/",
+    "preact-render-to-string": "https://esm.sh/*preact-render-to-string@6.2.1",
+    "@preact/signals": "https://esm.sh/*@preact/signals@1.1.3",
+    "@preact/signals-core": "https://esm.sh/*@preact/signals-core@1.2.3",
+    "twind": "https://esm.sh/twind@0.16.19",
+    "twind/": "https://esm.sh/twind@0.16.19/",
+    "$std/": "https://deno.land/std@0.193.0/",
+    "zod": "https://deno.land/x/zod@v3.21.4/mod.ts"
   },
   "lint": {
     "rules": {
       "exclude": [
         "no-unused-vars",
         "no-explicit-any"
+      ],
+      "tags": [
+        "fresh",
+        "recommended"
       ]
-    }
+    },
+    "exclude": [
+      "_fresh"
+    ]
   },
   "fmt": {
+    "exclude": [
+      "_fresh"
+    ],
     "lineWidth": 100
   }
 }
